Created CodeWars project

--- a/Algo2Tests/Algo2Tests.csproj
+++ b/Algo2Tests/Algo2Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AlgoDataStructures\AlgoDataStructures.csproj" />
+    <ProjectReference Include="..\CodeWars\CodeWars.csproj" />
   </ItemGroup>
 
 </Project>
